# c99-vectordb

./: .clang-format  .gitignore  Makefile  README.md  SKILL.md  clang_options.rsp  compile_commands.json  memo  memo_cli.py  pyproject.toml
docs/: METADATA.md
models/: download.sh
shaders/: headless.comp  memo_search.comp
src/: app_types.h  inference.c  llm_model.c  main.c  memory.c  metadata.c  metadata.h  tokenizer.c  vectordb.c  vectordb.h  vulkan_backend.c  vulkan_backend.h  vulkan_ctx.c
tmp/: migrate_legacy_to_yaml.py
