[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memo"
version = "0.1.0"
description = "FAISS-based memo reimplementation"
requires-python = ">=3.11"
dependencies = [
  "faiss-cpu>=1.13.0",
  "numpy>=2.0.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
memo = "memo_cli:main"

[tool.setuptools]
py-modules = ["memo_cli"]
